<resources>
    <string name="app_name">Driving test</string>
    <string name="seconds">Seconds</string>
    <string name="count_format" translatable="false">%1$d/%2$d</string>
    <string name="timer_format" translatable="false">%1$s %2$s</string>
    <string name="testing">Testing</string>
    <string name="remaining_time">Remaining:</string>
    <string name="learning">Learning</string>
    <string name="remaining_count">Total:</string>
    <string name="calculate">Submit</string>
    <string name="choice_a">A.</string>
    <string name="choice_b">B.</string>
    <string name="choice_c">C.</string>
    <string name="choice_d">D.</string>
    <string name="your_score">Your score is %1$d. Sorry! You fail the exams!</string>
    <string name="your_score_pass">Your score is %1$d. Congratulations! You\'ve run the course and passed the exams!</string>
    <string name="score">Score</string>
    <string name="date">Times</string>
    <string name="start">Start Testing</string>
    <string name="start_text">Timer will be started after click "OK" to start testing.</string>
    <string name="pre">Pre-Test</string>
    <string name="post">Post-Test</string>
    <string name="posttest">แบบทดสอบหลังการเรียนรู้</string>
    <string name="test_summary" translatable="false">ผลการทดสอบความรู้</string>
    <string name="guidelines" translatable="false">แนวข้อสอบใบอนุญาตขับขี่</string>
    <string name="guidelines1" translatable="false">แนวข้อสอบใบอนุญาตขับขี่รถยนต์</string>
    <string name="guidelines2" translatable="false">แนวข้อสอบใบอนุญาตขับขี่รถจักรยานยนต์</string>
    <string name="test" translatable="false">แบบทดสอบรวมข้อมูลความรู้</string>
    <string name="posttestcat1" translatable="false">แบบทดสอบหลังการเรียนรู้เรื่อง ป้ายจราจร</string>
    <string name="posttestcat2" translatable="false">แบบทดสอบหลังการเรียนรู้เรื่อง พ.ร.บ. ทางบก</string>
    <string name="posttestcat3" translatable="false">แบบทดสอบหลังการเรียนรู้เรื่อง การใช้ถนนอย่างปลอดภัย</string>
    <string name="posttestcat4" translatable="false">แบบทดสอบหลังการเรียนรู้เรื่อง วิธีปฏิบัติในการใช้รถ</string>
    <string name="posttestcat5" translatable="false">แบบทดสอบหลังการเรียนรู้เรื่อง หมายเลขสายด่วน</string>

    <string name="result_guidelines1" translatable="false">ผลการทดสอบแนวข้อสอบใบอนุญาตขับขี่รถยนต์</string>
    <string name="result_guidelines2" translatable="false">ผลการทดสอบแนวข้อสอบใบอนุญาตขับขี่รถจักรยานยนต์</string>
    <string name="result_test" translatable="false">ผลการทดสอบรวมข้อมูลความรู้</string>
    <string name="result_cat1" translatable="false">ผลการทดสอบเรื่อง ป้ายจราจร</string>
    <string name="result_cat2" translatable="false">ผลการทดสอบเรื่อง พ.ร.บ. ทางบก</string>
    <string name="result_cat3" translatable="false">ผลการทดสอบเรื่อง การใช้ถนนอย่างปลอดภัย</string>
    <string name="result_cat4" translatable="false">ผลการทดสอบเรื่อง วิธีปฏิบัติในการใช้รถ</string>
    <string name="result_cat5" translatable="false">ผลการทดสอบเรื่อง หมายเลขสายด่วน</string>

    <string name="type">Type</string>
    <string name="score_label">Score</string>
    <string name="dates">Date</string>
    <string name="no">No.</string>
</resources>
