<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/appGray"
    android:layout_height="wrap_content">

    <drivingtest.project.com.base.view.MyTextView
        android:id="@+id/tvNo"
        style="@style/AppText.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/no"
        android:textStyle="bold" />

    <drivingtest.project.com.base.view.MyTextView
        android:id="@+id/tvDate"
        style="@style/AppText.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/dates"
        android:textStyle="bold" />

    <drivingtest.project.com.base.view.MyTextView
        android:id="@+id/tvType"
        style="@style/AppText.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/type"
        android:textStyle="bold" />

    <drivingtest.project.com.base.view.MyTextView
        android:id="@+id/tvScore"
        style="@style/AppText.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/score_label"
        android:textStyle="bold" />
</LinearLayout>
